update auth
