# src/features/auth/auth.route.ts
@@ -4,15 +4,9 @@ import { authMiddleware } from "./auth.middleware";
 
 const router = express.Router();
 
-router.post("/register", authController.userRegister);
+router.post("/register", authController.register);
 router.post("/login", authController.login);
-router.post("/logout", authController.logout);
-
-// Protected routes
-router.get("/me", authMiddleware, authController.userRestrict);
-router.get("/profile", authMiddleware, (req, res) => {
-    // req.user is available here
-    res.json({ message: "Protected route", user: req.user });
-});
+router.post("/logout", authMiddleware, authController.logout);
+router.get("/me", authMiddleware, authController.me);
 
 export default router;
